counter-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counter
spec:
  revisionHistoryLimit: 0
  replicas: 2
  selector:
    matchLabels:
      app: counter
  template:
    metadata:
      labels:
        app: counter
    spec:
      containers:
        - name: main
          image: ondrejsika/counter
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 30Mi
            limits:
              cpu: 100m
              memory: 60Mi
