ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: counter
spec:
  rules:
    - host: hello-generali.k8sdb.cpas.cz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: counter
                port:
                  number: 80
